<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/by_country">

    <fragment
        android:id="@+id/by_country"
        android:name="com.sagish.testcoronaapp.ui.fragments.byCountry.GetByCountryFragment"
        android:label="@string/by_country"
        tools:layout="@layout/details_fragment" />

    <fragment
        android:id="@+id/my_country"
        android:name="com.sagish.testcoronaapp.ui.fragments.myCountry.GetByMyCountryFragment"
        android:label="@string/my_country"
        tools:layout="@layout/details_fragment" />

    <fragment
        android:id="@+id/near_by"
        android:name="com.sagish.testcoronaapp.ui.fragments.nearBy.NearByFragment"
        android:label="@string/near_by"
        tools:layout="@layout/fragment_bluetooth" />
</navigation>