<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.nearBy.NearByFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/scan_info"
            android:textSize="@dimen/text_18"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/unit_3"
            android:layout_marginStart="@dimen/unit_3"
            android:layout_marginTop="@dimen/unit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/start_scan_for_infected_people"
            android:textStyle="bold"
            android:textSize="@dimen/text_18"
            android:padding="@dimen/unit"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminate="true"
            style="@android:style/Widget.ProgressBar.Large"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stop_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stop_scanning"
            android:layout_marginTop="@dimen/unit"
            android:textStyle="bold"
            android:textSize="@dimen/text_18"
            android:padding="@dimen/unit"
            android:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>