<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="date"
            type="String" />

        <variable
            name="details"
            type="com.sagish.testcoronaapp.ui.views.DetailsListItemView.Details" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/unit"
            android:weightSum="2"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/text_18"
                android:layout_marginEnd="@dimen/half_unit"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_18"
                android:text="@{date}"
                tools:text="01/11/2020"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmed_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/date_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/unit"
            android:weightSum="2"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:textSize="@dimen/text_18"
                android:layout_marginEnd="@dimen/half_unit"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/confirmed_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_18"
                android:layout_weight="1"
                android:text="@{String.valueOf(details.confirmed)}"
                tools:text="120000"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recovered_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/confirmed_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/unit"
            android:weightSum="2"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textSize="@dimen/text_18"
                android:layout_marginEnd="@dimen/half_unit"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recovered_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_18"
                android:layout_weight="1"
                android:text="@{String.valueOf(details.recovered)}"
                tools:text="120000"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deaths_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/recovered_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/unit"
            android:weightSum="2"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                android:textSize="@dimen/text_18"
                android:layout_marginEnd="@dimen/half_unit"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deaths_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_18"
                android:layout_weight="1"
                android:text="@{String.valueOf(details.deaths)}"
                tools:text="120000"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>